

=== UPGRADING=====
We suggest to check out and hold close to the instructions, which can be found in our online manual:
https://manual.limesurvey.org/Upgrading_from_a_previous_version

Thank you to everyone who helped with this new release!


CHANGE LOG
------------------------------------------------------
Changes from 3.27.15 (build 210907) to 3.27.16 (build 210909) September 7, 2021
-Fixed issue: Remove debug code from theme file
-Fixed issue #17535: Error when logging in with LDAP (Carsten Schmitz)
#Updated translation: Xhosa by erik.lamontagne
#Updated translation: Ilocano by c_schmitz
#Updated translation: Hiligaynon by c_schmitz
#Updated translation: Cebuano by c_schmitz


Changes from 3.27.14 (build 210831) to 3.27.15 (build 210907) September 6, 2021
-Fixed issue #17541: PDF export via plugin not possible (#2025) (pop1989_bb)
#Updated translation: Xhosa by erik.lamontagne
#Updated translation: Catalan by qualitatuvic


Changes from 3.27.13 (build 210823) to 3.27.14 (build 210831) August 30, 2021
-Fixed issue [security]: Add missing url_encode filter to URL in Twig template (Mika Kulmala and Ville Kapanen at F-Secure) (Olle Haerstedt)
#Updated translation: Polish by elissa
#Updated translation: Polish (Informal) by elissa
#Updated translation: Italian by lfanfoni
#Updated translation: Italian (Informal) by lfanfoni
#Updated translation: Czech by jelen1
#Updated translation: Czech (Informal) by jelen1


Changes from 3.27.12 (build 210816) to 3.27.13 (build 210823) August 23, 2021
-Fixed issue: Fatal error when using unary operator on empty string (Carsten Schmitz)
-Fixed issue #16720:  Invalid question codes during lss import do not get replaced (#1994) (Gabriel Jenik)
-Fixed issue [security]: Disallow XML upload in survey resources (Mika Kulmala and Ville Kapanen at F-Secure) (Olle Haerstedt)
-Fixed issue #17519: LDAP not working when using URI with port (Carsten Schmitz)